# liulian-python

./: .gitignore  404.html  CLAUDE.md  INTEGRATION_PLAN.md  README.md  README.zh.md  _record_baselines.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_etsformer_activation.py  test_etsformer_dim.py  test_etsformer_init.py  test_etsformer_models.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.playwright-mcp/: page-2026-05-13T05-14-25-230Z.yml  page-2026-05-13T05-14-42-287Z.yml  page-2026-05-13T05-14-53-296Z.yml  page-2026-05-13T05-15-33-535Z.yml
adapter_guide/: index.html
architecture/: index.html
breakpoint_bridge/: index.html
cli/: index.html
contributing/: index.html
data_loaders/: index.html
dataset_config_audit/: index.html
datasets/: index.html
demo_gallery/: index.html
demo_patchtst_swiss1990/: index.html
docs/: breakpoint_bridge.md  dataset_config_audit.md  datasets.md  demo_gallery.md  demo_patchtst_swiss1990.md  design-report.md  entity_identifiers.md  forecasting_pipeline.md  index.md  results_json.md  screens-design.md  search_spaces.md  tasks.md  training_comparison.md  tsl_comparison.md
docs/models/: torch_models.md
docs/research/: 2026-04-10-entity-id-forecasting-report-refined.md  2026-04-10-entity-id-forecasting-report.md  2026-04-14-audit-correction-log.md  2026-04-16-entity-aware-forecasting-research-proposal-zh.md  2026-04-16-entity-aware-forecasting-research-proposal.md  2026-04-16-spatio-temporal-intelligence-research-proposal-zh.md  2026-04-16-spatio-temporal-intelligence-research-proposal.md  2026-05-15-entity-id-progress-slide.md  2026-05-15-pred-true-curve-analysis.md  2026-06-13-swiss3dt-results.md  2026-06-14-swiss-mc-results.md  research_mindmap_st_water.html
docs/strategy/: AUDIT_REPORT_2026-05-12.md  AUDIT_REPORT_2026-05-12.zh.md  LOCAL_STACK_2026-05-19.md  MOVED.md  NEOBANKER_REUSE_MAP.md  NEOBANKER_REUSE_MAP.zh.md  ONE_WEEK_SPRINT.md  ONE_WEEK_SPRINT.zh.md  PLATFORM_BLUEPRINT.md  PLATFORM_BLUEPRINT.zh.md  PLATFORM_DESIGN.md  PLATFORM_DESIGN.zh.md  REFERENCES.md  REFERENCE_DESIGNS.md  ubelix-cluster-tiers.md  ubelix-cost-ledger.md
entity_identifiers/: index.html
examples/: data_loaders_example.py  forecasting_patchtst_swiss1990_pipeline.py  quick_run.py
experiments/: run.py
experiments/adapt_tsl_lib/: IDENTICAL_MATCH_CHANGES.md  IDENTICAL_RESULTS_CHANGES.md  MAIN_PIPELINE_CHANGES.md  MISMATCH_ANALYSIS_REPORT.md  TRANSFORMER_ALIGNMENT_REPORT.md  _merge_results.py  audit_dataset_configs.py  compare_identical.py  compare_tsl_liulian.py  final_identical_test.py  generate_configs.py  identical_comparison.py  identical_comparison_v2.py  identical_full_pipeline.py  run_fixed_pairs_compare.sh  run_newly_added_missing_pairs.sh  update_doc.py  (+6 more)
forecasting_pipeline/: index.html
jobs/: ubelix_cost_ledger.json  ubelix_cost_tracker.py
liulian/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
manifest_spec/: index.html
results_json/: index.html
scripts/: charts.js  mock-data.js  scene-controller.js
search/: search_index.json
search_spaces/: index.html
styles/: main.css
tests/: conftest.py  test_adaptation_round.py  test_aggregator.py  test_augmentation.py  test_backend.py  test_benchmark_pipeline.py  test_cli_subcommands.py  test_data_components.py  test_e2e_dummy.py  test_e2e_swissriver.py  test_experiment_quick.py  test_integration.py  test_log_tags.py  test_loggers.py  test_m4_dataset.py  test_models.py  test_optim.py  test_runtime.py  test_tasks.py  test_training_gaps.py  test_viz_plots.py
tools/: aggregate_results.py  breakpoint_bridge.py  compare_tsl_liulian.py  generate_configs.py  plot_swiss3dt_results.py  plot_swiss_mc_results.py  run_benchmark.py
training_comparison/: index.html
tsl_comparison/: index.html
vibe/: copilot_agent_loop_prompt.md  meta_plan_prompt.md  prompt_history.md
(+436 files in other folders)
