[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liulian"
version = "0.0.1"
description = "Research OS for spatiotemporal model experimentation — time-series, graph, and spatiotemporal model training, evaluation, and inference."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "jajupmochi"},
]
keywords = ["machine-learning", "spatiotemporal", "time-series", "graph", "research"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
logging = ["wandb>=0.15.0"]
hpo = ["ray[tune]>=2.0.0"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
torch = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "transformers>=4.31.0",
    "accelerate>=0.28.0",
    "sentencepiece>=0.2.0",
]
torch-full = [
    "liulian[torch]",
    # Use the latest mamba-ssm version (remove version pin)
#    "mamba-ssm>=2.3.0",
    "reformer-pytorch>=1.4.0",
    "local-attention>=1.11.0",
]
all = [
    "liulian[dev,logging,hpo,docs,torch-full]"
]

[project.scripts]
liulian = "liulian.cli:main"

[project.urls]
Homepage = "https://github.com/jajupmochi/liulian-python"
Documentation = "https://jajupmochi.github.io/liulian-python"
Repository = "https://github.com/jajupmochi/liulian-python"
Issues = "https://github.com/jajupmochi/liulian-python/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"liulian/data/scalers.py" = ["F401"]
"liulian/models/torch/__init__.py" = ["F401"]
"liulian/models/torch/layers/__init__.py" = ["F401"]
"liulian/models/torch/autoformer.py" = ["E741"]
"liulian/models/torch/informer.py" = ["E741"]
"liulian/models/torch/itransformer.py" = ["E741"]
"liulian/data/ts/timeseriesdataset.py" = ["E402"]
"tests/test_adaptation_round.py" = ["F841"]
"tests/test_cli_subcommands.py" = ["F401"]
"tests/**/*.py" = ["F841"]
"liulian/models/torch/layers/attention.py" = ["E501"]
"liulian/models/torch/patchtst.py" = ["E741"]
"liulian/models/torch/timellm.py" = ["E501"]
"liulian/models/torch/timexer.py" = ["E501"]
"liulian/models/torch/timemoe.py" = ["E501"]
"tests/test_data_augmentation.py" = ["F841"]
"liulian/optim/ray_optimizer.py" = ["E501"]
"liulian/pipeline.py" = ["E501"]
"liulian/runtime/experiment.py" = ["E501"]
"liulian/utils/augmentation.py" = ["F841"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.isort]
profile = "black"
known_first_party = ["liulian"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (may involve downloads or heavy computation)",
    "download: marks tests that require internet connection and download models/data",
    "main_branch: marks tests that should only run on the main branch (e.g. Swiss River e2e)",
]

[tool.uv]
preview = true

[tool.uv.extra-build-dependencies]
mamba-ssm = ["torch"]

[tool.yapf]
based_on_style = "pep8"
blank_lines_around_top_level_definition = 2
